[tool.poetry]
name = "artemis-4"
version = "0.1.0"
description = ""
authors = ["matheusbruno23 <matheus.bruno.1805@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
mysqlclient = "^2.2.4"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
